Fixed header , filter and segment layouts   - set description characters to 240 to avoid overlapping   - adjusted header position   - fixed scroll indicator

--- a/css/contentNavigation/filter.less
+++ b/css/contentNavigation/filter.less
@@ -2,7 +2,7 @@
 	z-index: 12;
 	position: fixed !important;
 	background-color : @cn-white;
-	top: 162px;
+	top: 144px;
 	width : 273px;
 
 	.cn-sidebar-container {
@@ -68,9 +68,9 @@
 
 				ul {
 					padding-left : 0;
-					
+
 					.cn-tree-category {
-						margin-left: 20px;	
+						margin-left: 20px;
 					}
 				}
 
@@ -113,9 +113,7 @@
 		}
 
 	}
-
 }
-
 
 // fix hover for desktop , mobile and tablet
 
