--- a/css/contentNavigation/header.less
+++ b/css/contentNavigation/header.less
@@ -1,7 +1,7 @@
 .cn-header-content {
 	height           : 92px;
 	background-color : @cn-white;
-	top              : 70px !important;
+	top              : 50px !important;
 	z-index          : 1029 !important;
 
 
