--- a/css/contentNavigation/lazyload-spinner.less
+++ b/css/contentNavigation/lazyload-spinner.less
@@ -8,7 +8,7 @@
 	margin     : 0 0 0 ( @cn-base-margin * 6 );
 	display    : none;
 	height     : 82px;
-	z-index    : 2;
+	z-index    : 9999;
 
 	.border-radius( @cn-base-radius / 3 );
 	.opacity( .85 );
