--- a/css/contentNavigation/mixins.less
+++ b/css/contentNavigation/mixins.less
@@ -97,7 +97,7 @@
 #cn-filter-shadow {
     width : 100%;
     position : absolute;
-    top: 0;
+    top: -2px;
     &.enable-scroll-indicator {
         .box-shadow( 0 0 1px 1px @cn-gray-darkest );
     }
