--- a/css/contentNavigation/segments.less
+++ b/css/contentNavigation/segments.less
@@ -10,11 +10,6 @@ ul.cn-segments-container {
 
 	padding: 0;
 
-	.img-responsive {
-		width      : 100%;
-		max-height : 158px;
-	}
-
 	li {
 		.listOffset( 0 );
 		border-top    : 0;
@@ -45,6 +40,11 @@ ul.cn-segments-container {
 						top      : 50%;
 						left     : ~"calc(50% - 35px)";
 						position : absolute;
+					}
+
+					.img-responsive {
+						width      : 100%;
+						max-height : 140px;
 					}
 				}
 
